--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -11,7 +11,7 @@
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-    <LinearLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:id="@+id/container"
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:id="@+id/editText"
             android:inputType="text"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
